# panda-chess-restet

./: .gitignore  main_grasp.py  main_grasp_standing.py
Project/: PhysID_Proposal.tex  chessboard_publisher.py  collect_calib_data.py  compute_calibration.py  compute_spatial_calibration.py  detect_markers_plot.py  king_vector_publisher.py  marker_poses.npz  plot_calibration.py
Project/calib_data/: K.npy  T_base_cam.npy
Project/calib_data/images/: 000_T_base_ee.npy  001_T_base_ee.npy  002_T_base_ee.npy  003_T_base_ee.npy  004_T_base_ee.npy  005_T_base_ee.npy  006_T_base_ee.npy  007_T_base_ee.npy  008_T_base_ee.npy  009_T_base_ee.npy  010_T_base_ee.npy  011_T_base_ee.npy  012_T_base_ee.npy  013_T_base_ee.npy  014_T_base_ee.npy  015_T_base_ee.npy  016_T_base_ee.npy  017_T_base_ee.npy  018_T_base_ee.npy  019_T_base_ee.npy  020_T_base_ee.npy  021_T_base_ee.npy  022_T_base_ee.npy
Project/spatial_calib/: T_base_cam.npy
files/: main_grasp.py  main_grasp_standing_4.py
franka_emika_panda/: chess_piece_scene.xml  debug_grasp_scene.xml  grasp_chess_scene.xml  grasp_ik_scene.xml  grasp_ik_scene_standing.xml  mark_gripper_scene.xml  mark_targets_scene.xml  simple_grasp_scene.xml
franka_emika_panda/assets/: chess_king.stl
panda_calibration/: CMakeLists.txt  package.xml
panda_calibration/launch/: calibrate.launch
panda_calibration/rviz/: calibrate.rviz
panda_calibration/scripts/: calibrate.sh  calibrate_node.py
panda_standing_grasp/: CMakeLists.txt  package.xml
panda_standing_grasp/config/: params.yaml
panda_standing_grasp/rviz/: standing_grasp.rviz
panda_standing_grasp/scripts/: grasp_node.py
panda_standing_grasp/src/panda_standing_grasp/: planner.py
src/franka_emika_panda/: go_to_grasp_scene.xml  grasp_ik_scene.xml  grasp_ik_scene_standing_4.xml  panda_torque_table_shelves.xml
src/panda_calibration/: setup.py
src/panda_standing_grasp/: package.xml  setup.py
(+8 files in other folders)
