<?xml version="1.0"?>
<package format="2">
  <name>panda_calibration</name>
  <version>0.1.0</version>
  <description>Eye-to-hand camera calibration using ArUco markers on Franka EE (frankapy)</description>
  <maintainer email="aayush.agrawal2003@gmail.com">Aayush Agrawal</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
</package>
